--- a/roles/media-server/templates/radarr.yaml
+++ b/roles/media-server/templates/radarr.yaml
@@ -26,8 +26,6 @@ spec:
         - name: cluster.timezone
           value: {{ .Values.cluster.timezone }}
           
-        - name: storage.storageClassName
-          value: {{ .Values.config.storageClassName }}
         - name: storage.media.nfs.server
           value: {{ .Values.media.nfs.server }}
         - name: storage.media.nfs.path
@@ -58,8 +56,12 @@ spec:
 
         - name: app-template.serviceAccount.name
           value: radarr-sa
+        - name: app-template.persistence.data.enabled
+          value: "true"
         - name: app-template.persistence.data.existingClaim
           value: radarr-data-volume
+        - name: app-template.persistence.config.enabled
+          value: "true"
         - name: app-template.persistence.config.existingClaim
           value: radarr-config
         - name: app-template.persistence.config.globalMounts[0].path
