--- a/charts/k10-kasten-operator/templates/subscription.yaml
+++ b/charts/k10-kasten-operator/templates/subscription.yaml
@@ -7,8 +7,8 @@ metadata:
   namespace: kasten-io
 spec:
   channel: stable
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   name: k10-kasten-operator-rhmp
   source: redhat-marketplace
   sourceNamespace: openshift-marketplace
-  startingCSV: k10-kasten-operator-rhmp.v7.5.1
+  startingCSV: k10-kasten-operator-rhmp.v7.5.9
