--- a/charts/openshift-kube-descheduler-operator-config/templates/kubedescheduler.yaml
+++ b/charts/openshift-kube-descheduler-operator-config/templates/kubedescheduler.yaml
@@ -12,3 +12,5 @@ spec:
     - CompactAndScale
   deschedulingIntervalSeconds: 3600
   managementState: Managed
+  profileCustomizations:
+    devEnableEvictionsInBackground: true
