--- a/charts/k10-kasten-config/templates/k10.yaml
+++ b/charts/k10-kasten-config/templates/k10.yaml
@@ -9,6 +9,9 @@ spec:
       enabled: false
     tokenAuth:
       enabled: true
+  global:
+    persistence:
+      storageClass: synology-iscsi
   metering:
     mode: airgap
   route:
