--- a/roles/base/values.yaml
+++ b/roles/base/values.yaml
@@ -6,9 +6,9 @@ spec:
     targetRevision: HEAD
   syncPolicy:
     automated:
-      enabled: true
-      prune: true
-      selfHeal: true
+      enabled: 'true'
+      prune: 'true'
+      selfHeal: 'true'
 
 cluster:
   top_level_domain: example.com
