--- a/roles/base/templates/cert-manager-operator.yaml
+++ b/roles/base/templates/cert-manager-operator.yaml
@@ -19,7 +19,5 @@ spec:
     helm:
   syncPolicy:
 {{ if .Values.spec.syncPolicy.automated.enabled }}
-    automated:
-      prune: '{{ .Values.spec.syncPolicy.automated.prune }}'
-      selfHeal: '{{ .Values.spec.syncPolicy.automated.selfHeal }}'
+    automated: {}
 {{ end }}
