--- a/roles/base/templates/cluster-k10-kasten-config.yaml
+++ b/roles/base/templates/cluster-k10-kasten-config.yaml
@@ -25,5 +25,6 @@ spec:
         - name: app-template.controllers.main.containers.main.env.TZ
           value: {{ .Values.cluster.timezone }}
   syncPolicy:
-    automated:
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
