--- a/roles/base/templates/keepalived-operator-config.yaml
+++ b/roles/base/templates/keepalived-operator-config.yaml
@@ -21,5 +21,6 @@ spec:
         - name: network.lan.defaultGW
           value: {{ .Values.network.lan.defaultGW }}
   syncPolicy:
-    automated:
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
