--- a/roles/base/templates/startpunkt.yaml
+++ b/roles/base/templates/startpunkt.yaml
@@ -35,10 +35,10 @@ spec:
         - name: startpunkt.hajimari.enabled
           value: "false"
         - name: startpunkt.istio.virtualservice.enabled
-          value: "false"        
+          value: "false"
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
