--- a/roles/home-automation/templates/home-assistant.yaml
+++ b/roles/home-automation/templates/home-assistant.yaml
@@ -69,8 +69,8 @@ spec:
           value: 0.45.22
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
