--- a/roles/home-automation/templates/node-red.yaml
+++ b/roles/home-automation/templates/node-red.yaml
@@ -38,8 +38,8 @@ spec:
           value: 4.0.9
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
