--- a/roles/media-server/templates/plex.yaml
+++ b/roles/media-server/templates/plex.yaml
@@ -32,9 +32,9 @@ spec:
           value: {{ .Values.media.nfs.path }}
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
 {{ end }}
