--- a/roles/media-server/templates/radarr.yaml
+++ b/roles/media-server/templates/radarr.yaml
@@ -73,9 +73,9 @@ spec:
           value: 5.4.6.8723
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
 {{ end }}
