--- a/clusters/openshift.ullberg.family/templates/ullberg-custom.yaml
+++ b/clusters/openshift.ullberg.family/templates/ullberg-custom.yaml
@@ -24,6 +24,8 @@ spec:
           value: {{ .Values.spec.source.repoURL }}
         - name: spec.source.targetRevision
           value: {{ .Values.spec.source.targetRevision }}
+        - name: spec.syncPolicy.automated.enabled
+          value: '{{ .Values.spec.syncPolicy.automated.enabled }}'
 
         - name: cluster.top_level_domain
           value: {{ .Values.cluster.top_level_domain }}
