--- a/roles/base/templates/node-feature-discovery-config.yaml
+++ b/roles/base/templates/node-feature-discovery-config.yaml
@@ -18,5 +18,6 @@ spec:
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
   syncPolicy:
-    automated:
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
