--- a/roles/base/templates/openshift-kube-descheduler-operator-config.yaml
+++ b/roles/base/templates/openshift-kube-descheduler-operator-config.yaml
@@ -16,5 +16,6 @@ spec:
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
   syncPolicy:
-    automated:
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
