--- a/roles/media-server/templates/readarr.yaml
+++ b/roles/media-server/templates/readarr.yaml
@@ -73,9 +73,9 @@ spec:
           value: v0.1.1.1352
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
 {{ end }}
