--- a/roles/media-server/templates/sabnzbd.yaml
+++ b/roles/media-server/templates/sabnzbd.yaml
@@ -95,9 +95,9 @@ spec:
           value: 4.3.1
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
 {{ end }}
