--- a/roles/utilities/templates/cyberchef.yaml
+++ b/roles/utilities/templates/cyberchef.yaml
@@ -62,8 +62,8 @@ spec:
           value: "0"
 
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+{{ if .Values.spec.syncPolicy.automated.enabled }}
+    automated: {}
+{{ end }}
     syncOptions:
       - CreateNamespace=true
