--- a/clusters/openshift.ullberg.family/values.yaml
+++ b/clusters/openshift.ullberg.family/values.yaml
@@ -32,3 +32,11 @@ media:
   nfs:
     server: my-nas
     path: /mnt/nfs
+
+certificates:
+  issuer: staging # or production
+  aws:
+    region: YOUR_REGION
+    hosted_zone_id: YOUR_HOSTED_ZONE_ID
+    access_key_id: YOUR_ACCESS_KEY_ID
+    secret_access_key: YOUR_SECRET_ACCESS_KEY
