--- a/clusters/openshift.ullberg.family/templates/base.yaml
+++ b/clusters/openshift.ullberg.family/templates/base.yaml
@@ -27,14 +27,19 @@ spec:
         - name: spec.syncPolicy.automated.enabled
           value: '{{ .Values.spec.syncPolicy.automated.enabled }}'
 
-        - name: cluster.top_level_domain
-          value: {{ .Values.cluster.top_level_domain }}
-        - name: cluster.name
-          value: {{ .Values.cluster.name }}
-        - name: cluster.admin_email
-          value: {{ .Values.cluster.admin_email }}
-        - name: cluster.timezone
-          value: {{ .Values.cluster.timezone }}
+        - name: certificates.issuer
+          value: {{ .Values.certificates.issuer }}
+        - name: certificates.aws.region
+          value: {{ .Values.certificates.aws.region }}
+        - name: certificates.aws.hosted_zone_id
+          value: {{ .Values.certificates.aws.hosted_zone_id }}
+        - name: certificates.aws.access_key_id
+          value: {{ .Values.certificates.aws.access_key_id }}
+        - name: certificates.aws.secret_access_key
+          value: {{ .Values.certificates.aws.secret_access_key }}
 
         - name: network.lan.defaultGW
           value: {{ .Values.network.lan.defaultGW }}
+
+        - name: cluster.top_level_domain
+          value: {{ .Values.cluster.top_level_domain }}
