--- a/roles/media-server/values.yaml
+++ b/roles/media-server/values.yaml
@@ -20,6 +20,7 @@ applications:
   kavita: true
   lidarr: true
   overseerr: true
+  pinchflat: true
   plex: true
   prowlarr: true
   radarr: true
