--- a/roles/media-server/templates/pinchflat.yaml
+++ b/roles/media-server/templates/pinchflat.yaml
@@ -60,7 +60,7 @@ spec:
           value: "true"
         - name: app-template.persistence.data.existingClaim
           value: pinchflat-data-volume
-        - name: app-template.persistence.data.globalMounts..path
+        - name: app-template.persistence.data.globalMounts.path
           value: /downloads
         - name: app-template.persistence.data.advancedMounts.app[0].path
           value: /downloads
