--- a/roles/media-server/templates/pinchflat.yaml
+++ b/roles/media-server/templates/pinchflat.yaml
@@ -61,7 +61,7 @@ spec:
         - name: app-template.persistence.data.existingClaim
           value: pinchflat-data-volume
         - name: app-template.persistence.data.globalMounts[0].path
-          value: /downloads
+          value: ''
         - name: app-template.persistence.data.advancedMounts.app[0].path
           value: /downloads
         - name: app-template.persistence.data.advancedMounts.app[0].subPath
