--- a/roles/media-server/templates/pinchflat.yaml
+++ b/roles/media-server/templates/pinchflat.yaml
@@ -61,11 +61,7 @@ spec:
         - name: app-template.persistence.data.existingClaim
           value: pinchflat-data-volume
         - name: app-template.persistence.data.globalMounts[0].path
-          value: ''
-        - name: app-template.persistence.data.advancedMounts.app[0].path
-          value: /downloads
-        - name: app-template.persistence.data.advancedMounts.app[0].subPath
-          value: /media/youtube
+          value: '/downloads'
           
         - name: app-template.persistence.config.enabled
           value: "true"
