--- a/clusters/openshift.ullberg.family/values.yaml
+++ b/clusters/openshift.ullberg.family/values.yaml
@@ -28,6 +28,11 @@ democratic-csi:
       iscsi:
         targetPortal: "my-server[:port]"
 
+nfs-subdir-external-provisioner:
+  nfs:
+    server: my-nfs
+    path: /nfs/pvc
+
 media:
   nfs:
     server: my-nas
