--- a/clusters/openshift.ullberg.family/templates/storage-synology.yaml
+++ b/clusters/openshift.ullberg.family/templates/storage-synology.yaml
@@ -45,3 +45,9 @@ spec:
           value: {{ $csi.driver.config.httpConnection.username }}
         - name: democratic-csi.driver.config.iscsi.targetPortal
           value: {{ $csi.driver.config.iscsi.targetPortal }}
+          
+        {{ $nfs := index .Values "democratic-csi" }}
+        - name: nfs-subdir-external-provisioner.nfs.server
+          value: {{ $nfs.nfs.server }}
+        - name: nfs-subdir-external-provisioner.nfs.path
+          value: {{ $nfs.nfs.path }}
